# pico_mpu6050_dmp

./: .gitignore  CMakeLists.txt  README.md  mpu_example.c
libraries/: CMakeLists.txt
libraries/eMPL/: CMakeLists.txt
libraries/eMPL/mpu_dmp/: inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h
